# AutoBM

./: .gitignore  README.md  pyproject.toml
src/autobm/: autobm.py  client.py  main.py  utils.py
src/autobm/data/: creation.py
src/autobm/data/datasets/: proposer.csv
src/autobm/model/: pipeline.py
src/autobm/model/implementations/: cda_pipeline.py  rps_pipeline.py
src/autobm/prompt/: manager.py
src/autobm/prompt/specific/ulti/: code_tpl.txt
